# satyam

./: .gitignore  CHANGELOG.md  IP 2  README.md  RESUME_CONTEXT.md  TODO.md  TODO_STEP_1.md  add_import.cjs  app_return.txt  app_root.txt  app_ui_top.txt  build_raw_webgpu.cjs  build_webgl_engine.cjs  check_props.cjs  chunkToExtract.txt  compare_funcs.cjs  demo.html  diff.patch  ecosystem.config.cjs  eslint.config.js  extract_nav.cjs  extract_navbar_step1.cjs  extract_navbar_step2.cjs  extract_ui.cjs  find_app_line.cjs  find_app_return.cjs  find_app_root.cjs  find_app_start.cjs  find_app_top.cjs  find_bottom.cjs  find_layout.cjs  find_lower.cjs  find_main.cjs  find_return.cjs  find_rightSidebar.cjs  find_states.cjs  find_states2.cjs  find_title.cjs  find_title2.cjs  fix_app.cjs  (+63 more)
.agents/: AGENTS.md
backend/: .env.example  .otp_current.txt  ai_service.py  arbitrage_engine.py  auth_store.py  database.py  db.py  ecosystem.config.cjs  harvester.py  historical_data.db  main.py  news.db  news_fetcher.py  otp_log.txt  otp_watcher.py  requirements.txt  security_audit.py  setup_env.bat  smart_order_router.py  start.bat  test_otp_auto.py  timestamps.py  users_db.json
backend_rust/: Cargo.toml  install_and_run.ps1
backhome/: App.jsx  App.tsx  CoinSelectPage.jsx  CoinSelectPage.tsx  DrawingToolbar.jsx  DrawingToolbar.tsx  backend_main.py  candleCache.js  candleCache.ts  exchanges.js  exchanges.ts  index.css  main.jsx  main.tsx
docs/: app_jsx_breakdown.md  app_language_breakdown.md  dynamic_architecture_explanation.md  file_language_audit.md
public/: gpu_demo.html
scripts/: dev.cjs
scripts_archive/: apply_webgl.cjs  apply_webgl.rs  cleanup_webgl.cjs  detach_app_webgpu.cjs  extract_canvas.cjs  extract_context.cjs  fix.cjs  fixApp.cjs  fix_src_error.cjs  fix_toggle_final.cjs  fix_universal_drawings.cjs  fix_webgl_time_axis.cjs  fix_wheel_zoom.cjs  (+16 more)
src_demo/backend_cpp_cuda/: CMakeLists.txt  README.cpp  cuda_kernel.cu  hft_engine.cpp  hft_server.cpp  math_hft.cpp  server_main.cpp
src_demo/chart_engine_rust/: Cargo.toml
src_demo/chart_engine_rust/src/: lib.rs
src_demo/core_math_rust/: Cargo.toml  wasm_loader.js  wasm_loader.ts
src_demo/core_math_rust/src/: data_splicer.rs  hardware_detector.rs  lib.rs  math_indicators.rs  orchestrator.rs  universal_translator.rs
(+188 files in other folders)
